sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:6: error: value Red is not a member of object java.awt.Color
       if (getCouleur(i)==Color.Red){
                                ^DutchFlagAlgo:7: error: value Blue is not a member of object java.awt.Color
         if (getCouleur(getTaille-1-j)==Color.Blue || getCouleur(getTaille-1-j)==Color.Red){
                                              ^DutchFlagAlgo:7: error: value Red is not a member of object java.awt.Color
         if (getCouleur(getTaille-1-j)==Color.Blue || getCouleur(getTaille-1-j)==Color.Red){
                                                                                       ^DutchFlagAlgo:10: error: value White is not a member of object java.awt.Color
        } else if (getCouleur(i)==Color.White) {
                                        ^DutchFlagAlgo:11: error: value Blue is not a member of object java.awt.Color
         if (getCouleur(getTaille-1-j)==Color.Blue){
                                              ^