sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  while (!estTrie){
   for (i <- 0 to getTaille-2){
     for (j <- 0 to getTaille-i-2){
       if (getCouleur(i)==Color.Red){
         if (getCouleur(getTaille-1-j)==Color.Blue || getCouleur(getTaille-1-j)==Color.Red){
           echange(i,getTaille-1-j)
         }
     	 } else if (getCouleur(i)==Color.White) {
         if (getCouleur(getTaille-1-j)==Color.Blue){
           echange(i,getTaille-1-j)
         }
       }
   		}
		}
	}
}